# apdu-dispatch

./: Cargo.toml
src/: app.rs  dispatch.rs  interchanges.rs  lib.rs
