[package]
name = "apdu-dispatch"
version = "0.0.1"
authors = ["Conor Patrick <conor@solokeys.com>", "Nicolas Stalder <n@stalder.io>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
delog = "0.1.0"
heapless = { git = "https://github.com/japaric/heapless" }

# Components
iso7816 = { git = "https://github.com/robinkrahl/iso7816", branch = "generic" }
interchange = "0.2.0"


[dev-dependencies]
# Testing
serial_test = { version = "*" }

[features]
default = []
std = ["delog/std"]

log-all = []
log-none = []
log-debug = []
log-info = []
log-trace = []
log-warn = []
log-error = []
